--- a/BattleShip/BattleShipConsoleApp/WebApplication1/appsettings.json
+++ b/BattleShip/BattleShipConsoleApp/WebApplication1/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ApplicationDbContext": "Server=barrel.itcollege.ee;User Id=student;Password=Student.Pass.1;Database=student_arljub_battleship;MultipleActiveResultSets=true"
+    "ApplicationDbContext": "---"
   },
   "Logging": {
     "LogLevel": {
